fixed horizontal scrolling on new arrivals and top selling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,3 +58,12 @@ body {
     rgba(255, 255, 255, 0)
   );
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
